Fix T71605: Crash toggling dynamic topology in background mode

Support toggling without an undo stack in background mode.